# 3rd_hackathon

./: .env.example  .gitignore  AGENTS.md  Guide.md  PRESENTATION_PLAN.md  README.md  SKILLS.md  SUBMISSION_GUIDE.md  Variables.md  check_k8s_status.py  deploy_infra_wsl.sh  deploy_phase2.sh  exec_wsl.py  instructions.md  kafka_status.txt  main.py  manual_verify.py  manual_verify_to_file.py  mega_verify.py  netstat.txt  phase4_deploy_frontend.sh  postgres_status.txt  proxy_exec.py  pyproject.toml  start_and_deploy_all.sh  tasklist.txt  test_local.bat  verify_backend.py  verify_fix.py  verify_infra.py
.backups/yesterday/docusaurus-deploy/: SKILL.md
.backups/yesterday/mcp-code-execution/: SKILL.md
.backups/yesterday/nextjs-k8s-deploy/: SKILL.md
.claude/skills/docusaurus-deploy/: REFERENCE.md  SKILL.md
.claude/skills/fastapi-dapr-agent/: REFERENCE.md  SKILL.md
.claude/skills/kafka-k8s-setup/: REFERENCE.md
.claude/skills/mcp-code-execution/: SKILL.md
.claude/skills/nextjs-k8s-deploy/: REFERENCE.md  SKILL.md
.claude/skills/phase3-deploy/: REFERENCE.md  SKILL.md
.claude/skills/spec-governance-check/: REFERENCE.md
.specify/: README.md
.specify/memory/: constitution.md
history/: README.md
history/adr/: README.md
history/prompts/: README.md
history/prompts/constitution/: .gitkeep
history/prompts/general/: .gitkeep  001-skills-lifecycle-execution.general.prompt.md
skills-library/: README.md  SKILLS.md
skills-library/docs/: skill-development-guide.md
specs/: README.md
specs/governance/: architecture.spec.md  autonomy.spec.md  mcp.spec.md  skills.spec.md  system.spec.md  validation.spec.md
specs/learnflow/: agents.spec.md  product.spec.md
src/backend/: Dockerfile  README.md  main.py  pyproject.toml  python_path.txt  requirements.txt  start_backend.bat  test.txt
src/frontend/: Dockerfile  deployment.yaml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
tests/: test_backend_logic.py
(+46 files in other folders)
