[project]
name = "learnflow-workspace"
version = "0.1.0"
description = "LearnFlow Agentic System Workspace"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.14.0",
    "aiokafka>=0.10.0",
    "dapr>=1.13.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
